# hekticad

./: .gitignore  MiniCAD.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
legacy/: tsconfig.tsbuildinfo
legacy/Refference/: HektiCad standalone.html
reference/: DESIGN_SPEC.md  PARAMETRIC_REWORK.md  TESTS.md  app.jsx  canvas.jsx  icons.jsx  panels.jsx  prototype.html  scene.jsx  styles.css
scripts/: make-macos-icon.py
src/: bundled-defaults.json  cmdbar.ts  dirty.ts  docfile.ts  dom.ts  draftinfo.ts  features.ts  grips.ts  hittest.ts  io.ts  main.ts  math.ts  modal.ts  parametric-mode.ts  params.ts  render.ts  shortcuts.ts  snap.ts  state.ts  styles.css  tauribridge.ts  textgrips.ts  textinline.ts  textlayout.ts  themes.ts  tools.ts  types.ts  ui.ts  undo.ts  updater.ts  user-defaults.ts  view.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src/io/: drawing-bounds.ts  export-dxf.ts  export-eps.ts  export-pdf.ts  import-dxf.ts  import-eps.ts  import-pdf.ts  import-svg.ts  templates.ts  titleblock.ts  units.ts
src/ui/: company-settings.ts  dim-style-dialog.ts  export-dialog.ts  help-dialogs.ts  logo-manager.ts  menu-bar.ts  shortcuts-settings.ts  user-defaults-dialogs.ts
