[package]
name = "hektikcad"
version = "0.2.9"
description = "Parametric 2D CAD"
authors = ["Hekuran Rashiti"]
license = ""
repository = "https://github.com/hekuran-ra/hekticad"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hektikcad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
# Desktop-only: the single-instance plugin forwards argv from a second launch
# (e.g. the OS firing us up again because the user double-clicked a .hcad file
# associated with the app) to the already-running instance instead of starting
# a second window. `target_family = "unix"` + `target_os = "windows"` matches
# all desktop targets muda supports; we don't build for iOS/Android.
[target."cfg(any(target_os = \"macos\", target_os = \"linux\", target_os = \"windows\"))".dependencies]
tauri-plugin-single-instance = "2"
